--- a/plop-template/component/package.hbs
+++ b/plop-template/component/package.hbs
@@ -1,10 +1,10 @@
 {
-  "name": "lg-{{name}}",
+  "name": "wzp-{{name}}",
   "version": "0.0.0",
-  "description": "lg-{{name}} component",
+  "description": "wzp-{{name}} component",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
-  "author": "教瘦 <54337467@qq.com>",
+  "author": "noodlesfly",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
