--- a/plop-template/component/stories/component.stories.hbs
+++ b/plop-template/component/stories/component.stories.hbs
@@ -1,15 +1,15 @@
-import Lg{{properCase name}} from '../src/{{name}}.vue'
+import Wzp{{properCase name}} from '../src/{{name}}.vue'
 
 export default {
-  title: 'Lg{{properCase name}}',
-  component: Lg{{properCase name}}
+  title: 'Wzp{{properCase name}}',
+  component: Wzp{{properCase name}}
 }
 
 export const {{properCase name}} = _ => ({
-  components: { Lg{{properCase name}} },
+  components: { Wzp{{properCase name}} },
   template: `
     <div>
-      <lg-{{name}}></lg-{{name}}>
+      <wzp-{{name}}></wzp-{{name}}>
     </div>
   `
 })
