--- a/plop-template/component/__tests__/component.test.hbs
+++ b/plop-template/component/__tests__/component.test.hbs
@@ -1,5 +1,5 @@
 import { mount } from '@vue/test-utils'
 import Element from '../src/{{name}}.vue'
 
-describe('Lg-{{properCase name}}', () => {
+describe('Wzp-{{properCase name}}', () => {
 })
